add page for claiming registrations
